# songbird

./: .gitignore  .gitmodules  .mintignore  CMakeLists.txt  README.md  build_output.txt  docs.json  roadmap.md  test_changePlugin.js
.agent/: agent.md
app/: AudioQuantizer.h  AudioRecorder.cpp  AudioRecorder.h  BirdLoader.cpp  BirdLoader.h  CMakeLists.txt_snippet  LevelMeterBridge.cpp  LyriaManager.cpp  MacroMapper.cpp  MacroMapper.h  Main.cpp  MidiRecorder.cpp  MidiRecorder.h  MidiToBird.cpp  MidiToBird.h  PlaybackInfo.cpp  PlaybackInfo.h  PluginManager.cpp  ProjectState.cpp  ProjectState.h  SongbirdEditor.cpp  SongbirdEditor.h  StateSync.cpp  TrackStateWatcher.h  ValueTreeJSON.h  WebViewBridge.cpp
app/ai/: README.md
app/audio/: AudioQuantizer.cpp  AudioRecorder.cpp  AudioRecorder.h  DropoutDetector.h  LevelMeterBridge.cpp  LevelMeterBridge.h  MasterAnalyzerPlugin.cpp  MasterAnalyzerPlugin.h  PlaybackInfo.cpp  PlaybackInfo.h  PluginStateTracker.cpp  README.md
app/bridge/: BirdFileBridge.cpp  LyriaBridge.cpp  MidiEditBridge.cpp  PluginMixerBridge.cpp  README.md  RecordingBridge.cpp  SettingsBridge.cpp  StateBridge.cpp  TrackBridge.cpp  TransportBridge.cpp  UndoRedoBridge.cpp  WebViewBridge.cpp  WebViewHelpers.cpp  WebViewHelpers.h
app/export/: ExportManager.cpp  README.md
app/loader/: BirdFileOps.cpp  BirdLoader.cpp  BirdLoader.h  BirdParser.cpp  BirdParser.h  BirdPopulator.cpp  BirdPopulator.h  BirdSerializer.cpp  BirdSerializer.h  PluginRegistry.cpp  PluginRegistry.h  README.md
app/midi/: MidiEditHelpers.cpp  README.md  TrackStateWatcher.h
app/plugins/: PluginManager.cpp  README.md
app/state/: ProjectState.cpp  ProjectState.h  README.md  SessionState.cpp  StateSync.cpp
docs/: README.md  app.mdx  docs.json  embedded.mdx  eval.mdx  files.mdx  index.mdx  react_ui.mdx  roadmap.md  state-management.md  tools.mdx  utils.mdx
docs/app/: ai.md  ai.mdx  audio.md  audio.mdx  bridge.md  bridge.mdx  export.md  export.mdx  index.md  index.mdx  loader.md  loader.mdx  midi.md  midi.mdx  plugins.md  plugins.mdx  state.md  state.mdx
docs/app/ai/: index.mdx
docs/app/audio/: index.mdx
docs/app/bridge/: index.mdx
docs/app/loader/: index.mdx
docs/app/plugins/: index.mdx
docs/embedded/: index.mdx
docs/eval/: index.mdx
docs/files/: index.mdx  plugin_params.mdx
docs/files/plugin_params/: index.mdx
docs/react-ui/: atoms.md  components.md  data.md  index.md  lib.md  molecules.md  organisms.md  panels.md  slices.md  src.md
docs/react_ui/: index.mdx  src.mdx
docs/react_ui/src/: components.mdx  data.mdx  index.mdx  lib.mdx
docs/react_ui/src/components/: atoms.mdx  molecules.mdx  organisms.mdx  panels.mdx
docs/react_ui/src/data/: slices.mdx
docs/support/: embedded.md  eval.md  files.md  utils.md
docs/tools/: index.mdx
docs/utils/: index.mdx
documentation/: README.md  bird.md
eval/: baseline.bird  prompts.json  report.md  run_eval.js
eval/results/: p1.json  p10.json  p11.json  p12.json  p13.json  p14.json  p15.json  p16.json  p17.json  p18.json  p19.json  p2.json  p20.json  p21.json  p22.json  p23.json  p24.json  p25.json  p26.json  p27.json  p28.json  p29.json  p3.json  p30.json  p31.json  p32.json  p33.json  p34.json  p35.json  p36.json  p37.json  p38.json  p39.json  p4.json  p40.json  p41.json  p42.json  p43.json  p44.json  p45.json  (+35 more)
files/: daw.bird
files/bird/: grooves.bird
files/files/: daw.bird
files/plugin_lookups/: Arturia_Synths.md  Channel_Strips.md  Drums_and_Bass.md  Effects.md  Surge_XT.md
files/plugin_params/: Console_1.json  Kick_3.json  Kontakt_7.json  Monoment_Bass.json  Portal.json  Pre_1973.json  Statement_Lead.json  SubLabXL.json  Summit_Audio_Grand_Channel.json  Surge_XT.json  Surge_XT_Effects.json  Transient_Shaper.json  ValhallaRoom.json  ValhallaVintageVerb.json  Weiss_DS1-MK3.json  Weiss_EQ1.json  Weiss_EQ_MP.json  Weiss_MM-1_Mastering_Maximizer.json  _all_plugins.json  soothe2.json  ua_1176ln_rev_e.json  ua_century_channel.json  ua_fairchild_670.json  ua_manley_voxbox.json  uaudio_century_channel_strip.json  uaudio_fairchild_670.json  uaudio_manley_voxbox.json  uaudio_ua_1176ln_rev_e.json  weiss_ds1_mk3.json  weiss_mm_1_mastering_maximizer.json
files/sketches/: daw.bird  mysketch2.bird
files/sketches/daw/: .gitignore  daw.bird  daw.bird.state.json  daw.edit.json  daw.edit.xml  daw.mid  daw.state.json
libraries/composition/composers/: bird_composer.cpp  bird_composer.h
libraries/interface/: midi_io.cpp
libraries/magenta/: CircularBuffer.cc  CircularBuffer.h  Gemini.cc  Gemini.h  GeminiTypes.h  LyriaConfig.h  LyriaPlugin.cpp  LyriaPlugin.h  MagentaAliases.h  MagentaConstants.h  Optionals.h  WebSocket.cc  WebSocket.h
libraries/sequencing/: cc_event.h  clock.cpp  clock.h  sequencer.cpp  sequencer.h
libraries/sequencing/utils/: modulator.cpp
libraries/theory/: note_parser.cpp  note_parser.h
libraries/voices/: cc_presets.h  instrument.cpp  instrument.h  mix_presets.h
react_ui/: index.html  package-lock.json  package.json
react_ui/src/: App.tsx  README.md  index.css  main.tsx
react_ui/src/components/: ArrangementView.tsx  BirdFilePanel.tsx  ChatPanel.tsx  DebugPanel.tsx  HistoryPanel.tsx  MidiEditor.tsx  MixerPanel.tsx  README.md  SampleEditor.tsx  SettingsPanel.tsx  SheetMusicView.tsx  Transport.tsx  debug.css  midi-editor.css
react_ui/src/components/atoms/: BirdIcon.tsx  button.tsx  card.tsx  checkbox.tsx  index.ts  input.tsx  knob.tsx  label.tsx  menubar.tsx  onoff.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  sliderBig.tsx  switch.tsx  tabs.tsx  textarea.tsx  toast.tsx  toaster.tsx  toggle.tsx  togglegroup.tsx  tooltip.tsx  tooltipAtom.tsx
react_ui/src/components/molecules/: ChatMessage.tsx  ChatSuggestion.tsx  CpuMeter.tsx  LevelMeter.tsx  MarkdownRenderer.tsx  MidiClip.tsx  MuteSoloButtons.tsx  PanControl.tsx  PluginSlots.tsx  (+7 more)
react_ui/src/data/: README.md  bridge.ts  meters.ts  plugins.ts  sliderDrag.ts  store.ts
react_ui/src/lib/: README.md  index.ts  utils.ts
tools/: process_plugin_params.py  scan_plugin_params.cpp
utils/: launch.sh  sync_docs.sh
(+43 files in other folders)
